--- a/test.properties
+++ b/test.properties
@@ -793,26 +793,7 @@
     test.batch.max.subgroup.size=3
 
     test.batch.names=\
-        compile-jsp,\
-        functional-tomcat-hypersonic,\
-        functional-tomcat-mysql,\
-        integration-hypersonic,\
-        integration-mysql,\
-        integration-postgresql,\
-        modules-functional,\
-        modules-functional-tomcat-mysql,\
-        modules-integration-hypersonic,\
-        modules-integration-mysql,\
-        modules-integration-postgresql,\
-        modules-unit,\
-        plugins-compile,\
-        plugins-functional-bundle-tomcat-mysql,\
-        plugins-functional-tomcat-mysql,\
-        portal-web,\
-        ruby-sass-compiler,\
-        service-builder,\
-        tck,\
-        unit
+        service-builder
 
     test.batch.run.property.names[functional-tomcat-hypersonic]=portal.acceptance.tomcat.hypersonic
     test.batch.run.property.values[functional-tomcat-hypersonic]=true
