--- a/test.properties
+++ b/test.properties
@@ -794,21 +794,11 @@
 
     test.batch.names=\
         compile-jsp,\
-        functional-tomcat-hypersonic,\
         functional-tomcat-mysql,\
-        integration-hypersonic,\
         integration-mysql,\
-        integration-postgresql,\
-        modules-functional,\
-        modules-functional-tomcat-mysql,\
-        modules-integration-hypersonic,\
         modules-integration-mysql,\
-        modules-integration-postgresql,\
         modules-unit,\
         plugins-compile,\
-        plugins-functional-bundle-tomcat-mysql,\
-        plugins-functional-tomcat-mysql,\
-        portal-web,\
         ruby-sass-compiler,\
         service-builder,\
         tck,\
@@ -816,8 +806,8 @@
 
     test.batch.run.property.names[functional-tomcat-hypersonic]=portal.acceptance.tomcat.hypersonic
     test.batch.run.property.values[functional-tomcat-hypersonic]=true
-    test.batch.run.property.names[functional-tomcat-mysql]=portal.acceptance,portal.acceptance.tomcat.mysql
-    test.batch.run.property.values[functional-tomcat-mysql]=true,true
+    test.batch.run.property.names[functional-tomcat-mysql]=testray.main.component.name
+    test.batch.run.property.values[functional-tomcat-mysql]=Smoke
 
     #test.batch.run.type=sequential
     test.batch.run.type=single
